[gd_scene load_steps=46 format=3 uid="uid://b82en3adb3mg5"]

[ext_resource type="Script" uid="uid://pwaa1xkwtiua" path="res://Scripts/Morph.gd" id="1_s1qs2"]
[ext_resource type="Texture2D" uid="uid://bdvu5p8igbnda" path="res://Assets/OurAssets/Sprites/Morph (2).png" id="2_s1qs2"]

[sub_resource type="AtlasTexture" id="AtlasTexture_ks5xr"]
atlas = ExtResource("2_s1qs2")
region = Rect2(0, 256, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_a7j1l"]
atlas = ExtResource("2_s1qs2")
region = Rect2(256, 256, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_gtu43"]
atlas = ExtResource("2_s1qs2")
region = Rect2(512, 256, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_c707i"]
atlas = ExtResource("2_s1qs2")
region = Rect2(768, 256, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_2mxbi"]
atlas = ExtResource("2_s1qs2")
region = Rect2(1024, 256, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_tqgbd"]
atlas = ExtResource("2_s1qs2")
region = Rect2(1280, 256, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_r142f"]
atlas = ExtResource("2_s1qs2")
region = Rect2(0, 512, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_dj86e"]
atlas = ExtResource("2_s1qs2")
region = Rect2(768, 768, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_uwvle"]
atlas = ExtResource("2_s1qs2")
region = Rect2(1024, 768, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_wgtwu"]
atlas = ExtResource("2_s1qs2")
region = Rect2(1280, 768, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_hk6oo"]
atlas = ExtResource("2_s1qs2")
region = Rect2(0, 1024, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_bdy5n"]
atlas = ExtResource("2_s1qs2")
region = Rect2(256, 1024, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_a5y6u"]
atlas = ExtResource("2_s1qs2")
region = Rect2(512, 1024, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_d8bty"]
atlas = ExtResource("2_s1qs2")
region = Rect2(512, 1024, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_a2e57"]
atlas = ExtResource("2_s1qs2")
region = Rect2(512, 512, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_vv2jp"]
atlas = ExtResource("2_s1qs2")
region = Rect2(768, 512, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_a1qd2"]
atlas = ExtResource("2_s1qs2")
region = Rect2(1024, 512, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_qhjkb"]
atlas = ExtResource("2_s1qs2")
region = Rect2(1280, 512, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_ll82h"]
atlas = ExtResource("2_s1qs2")
region = Rect2(0, 768, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_ba7mq"]
atlas = ExtResource("2_s1qs2")
region = Rect2(256, 768, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_ndj0m"]
atlas = ExtResource("2_s1qs2")
region = Rect2(1024, 1024, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_jlq02"]
atlas = ExtResource("2_s1qs2")
region = Rect2(1280, 1024, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_odqap"]
atlas = ExtResource("2_s1qs2")
region = Rect2(0, 1280, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_d0te3"]
atlas = ExtResource("2_s1qs2")
region = Rect2(256, 1280, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_vlrxa"]
atlas = ExtResource("2_s1qs2")
region = Rect2(512, 1280, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_dxp0i"]
atlas = ExtResource("2_s1qs2")
region = Rect2(768, 1280, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_tbbyf"]
atlas = ExtResource("2_s1qs2")
region = Rect2(512, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_s1vsk"]
atlas = ExtResource("2_s1qs2")
region = Rect2(768, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_jcwb5"]
atlas = ExtResource("2_s1qs2")
region = Rect2(1024, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_3hflf"]
atlas = ExtResource("2_s1qs2")
region = Rect2(1280, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_mxhr4"]
atlas = ExtResource("2_s1qs2")
region = Rect2(768, 1280, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_fbtf2"]
atlas = ExtResource("2_s1qs2")
region = Rect2(1024, 1280, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_e3m4l"]
atlas = ExtResource("2_s1qs2")
region = Rect2(1280, 1280, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_ahvlk"]
atlas = ExtResource("2_s1qs2")
region = Rect2(0, 1536, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_s1qs2"]
atlas = ExtResource("2_s1qs2")
region = Rect2(768, 1024, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_5vgs8"]
atlas = ExtResource("2_s1qs2")
region = Rect2(256, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_uke7n"]
atlas = ExtResource("2_s1qs2")
region = Rect2(0, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_2b8f6"]
atlas = ExtResource("2_s1qs2")
region = Rect2(512, 0, 256, 256)

[sub_resource type="SpriteFrames" id="SpriteFrames_paaqs"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ks5xr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a7j1l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gtu43")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c707i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2mxbi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tqgbd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r142f")
}],
"loop": false,
"name": &"Attack1",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dj86e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uwvle")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wgtwu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hk6oo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bdy5n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a5y6u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d8bty")
}],
"loop": false,
"name": &"Attack1Down",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_a2e57")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vv2jp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a1qd2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qhjkb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ll82h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ba7mq")
}],
"loop": false,
"name": &"Attack1Up",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ndj0m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jlq02")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_odqap")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d0te3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vlrxa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dxp0i")
}],
"loop": false,
"name": &"Attack2",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tbbyf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s1vsk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jcwb5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3hflf")
}],
"loop": false,
"name": &"Chase",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mxhr4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fbtf2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e3m4l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ahvlk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s1qs2")
}],
"loop": false,
"name": &"Death",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5vgs8")
}],
"loop": true,
"name": &"Hurt",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_uke7n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2b8f6")
}],
"loop": true,
"name": &"Walking",
"speed": 12.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_s1qs2"]
size = Vector2(24, 24)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ks5xr"]
size = Vector2(70, 33)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_a7j1l"]
size = Vector2(99, 65)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gtu43"]
size = Vector2(22, 22)

[node name="Morph" type="CharacterBody2D"]
script = ExtResource("1_s1qs2")

[node name="MorphSprite" type="AnimatedSprite2D" parent="."]
unique_name_in_owner = true
sprite_frames = SubResource("SpriteFrames_paaqs")
animation = &"Attack1Down"
autoplay = "Walking"

[node name="HurtBoxMorph" type="Area2D" parent="."]

[node name="HurtCollisionMorph" type="CollisionShape2D" parent="HurtBoxMorph"]
unique_name_in_owner = true
shape = SubResource("RectangleShape2D_s1qs2")

[node name="HitboxMorph" type="Area2D" parent="."]

[node name="HitCollisionMorph" type="CollisionShape2D" parent="HitboxMorph"]
unique_name_in_owner = true
position = Vector2(30, -6.5)
shape = SubResource("RectangleShape2D_ks5xr")

[node name="HitCollisionMorph2" type="CollisionShape2D" parent="HitboxMorph"]
unique_name_in_owner = true
position = Vector2(43.5, -7.5)
shape = SubResource("RectangleShape2D_a7j1l")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_gtu43")

[connection signal="animation_finished" from="MorphSprite" to="." method="_on_morph_sprite_animation_finished"]
[connection signal="area_entered" from="HurtBoxMorph" to="." method="_on_hurt_box_morph_area_entered"]
